fixing overflow text for now

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,10 @@
   https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
-html, body {height: 100%;}
+html, body {
+	height: 100%; 
+	overflow-x: hidden;
+}
 body {
 	margin: auto;
 	padding: 0;
@@ -88,7 +91,6 @@ main {
 /*-- Type */
 
 h1 {
-	font-family: "Manrope";
 	font-size: 28px;
 	line-height: 1.1em;
 	font-weight: 800;
